refactoring auto-complete function

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     </section>
     <div class="container">
       <div class="autocomplete"></div>
+      <div id="summary"></div>
     </div>
     <script src="func.js"></script>
+    <script src="autoComplete.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
