--- a/index.html
+++ b/index.html
@@ -26,8 +26,21 @@
       </div>
     </section>
     <div class="container">
-      <div class="autocomplete"></div>
-      <div id="summary"></div>
+      <div class="columns">
+        <div class="column">
+          <div id="left-autocomplete"></div>
+          <div id="left-summary"></div>
+        </div>
+        <div class="column">
+          <div id="right-autocomplete"></div>
+          <div id="right-summary"></div>
+        </div>
+      </div>
+      <div class="column is-half notification is-primary tutorial">
+        <h1 class="title">search on a movie in both sides</h1>
+        <p class="subtitle">we will tell you which is best</p>
+      </div>
+
     </div>
     <script src="func.js"></script>
     <script src="autoComplete.js"></script>
